--- a/PS_1/task3/style.css
+++ b/PS_1/task3/style.css
@@ -10,11 +10,11 @@
   margin-bottom: 0px;
 }
 
-.head_content > #brand_1, #brand_2 {
+.head_content > #head_brand_1, #head_brand_2 {
   font-size: 50px;
 }
 
-.head_content > #brand_2 {
+.head_content > #head_brand_2 {
   color: #2bcbba;
 }
 
@@ -32,28 +32,33 @@
   color: black;
 }
 
-.block_1 {
+.container_1 {
   background-color: #2bcbba;
   text-align: left;
   font-size: 15pt;
   display: flex;
 }
 
-.block_1_img {
-  padding: 20px 100px 20px 150px;
+.container_1_img {
+  padding: 20px 150px;
 }
 
-.block_1_1 {
+#img_1 {
+  width:150px;
+  height:250px;
+}
+
+.container_1_content {
   font-family: sans-serif;
-  padding: 30px 50px 30px 50px;
+  padding: 30px 50px;
 }
 
-.block_1_2 {
+.container_1_content_row1 {
   color: #fff;
   font-size: 25px;
 }
 
-.block_1_3{
+.container_1_content_row2{
   color: #fff;
   font-size: 15px;
   text-align: justify;
@@ -71,7 +76,7 @@
   border: 1px solid #fff;
   background-color: inherit;
   color: #fff;
-  padding: 5px 20px 5px 20px;
+  padding: 5px 20px;
   border-radius: 3px;
   align-items: center;
 }
@@ -86,13 +91,13 @@
   color: #f368e0;
 }
 
-.block_2 {
+.container_2 {
   background-color: #f7f1e3;
   display: flex;
-  padding: 50px 30px 50px 30px;
+  padding: 50px 30px;
 }
 
-.block_2_1 {
+.container_2_col {
   width: calc(100%/3);
   text-align: center;
 }
@@ -101,21 +106,22 @@
   color: #f7f1e3;
   background-color: #2bcbba;
   padding: 20px;
-  border-radius: 100%;
+  border-radius: 50%;
 }
 
-.block_2_link {
+
+.column_link {
   color: #000;
   font-size: 18pt;
   text-decoration: none;
 }
 
-.block_2_link:hover {
+.column_link:hover {
   text-decoration: underline;
   color: #f368e0;
 }
 
-.block_2_content {
+.column_content {
   font-size: 12pt;
 }
 
@@ -132,7 +138,7 @@
   padding-bottom: 30px;
 }
 
-#forms {
+#footer_form {
   text-align: center;
 }
 
