--- a/GoT_forms/style.css
+++ b/GoT_forms/style.css
@@ -48,7 +48,7 @@ body {
 
 form {
   background-color: #202020;
-  width: 30em;
+  width: 25em;
   display: flex;
   flex-direction: column;
   margin-top: 2em;
@@ -118,7 +118,7 @@ select {
   color: #fef8eb;
   border: none;
   height: 3em;
-  margin-top: 2em;
+  /* margin-top: 2em; */
   line-height: 2.5;
 }
 
