--- a/PS_1/task2/style.css
+++ b/PS_1/task2/style.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
 }
 
-.body {
+* {
   margin: 0;
   padding: 0;
 }
@@ -10,6 +10,7 @@ html {
 .basicBlock {
   background-color: #efefef;
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
   text-align: justify;
   font-size: 1em;
@@ -53,7 +54,7 @@ html {
   line-height: 1.5;
   text-align: justify;
   margin-left: 200px;
-  margin-right: 200px; 
+  margin-right: 200px;
 }
 
 .footer {
