--- a/PS_3/landing/style.css
+++ b/PS_3/landing/style.css
@@ -166,19 +166,13 @@
   width: 17em;
 }
 
-#toTop {
-  width: 5em;
-  border: 1px solid #ccc;
-  background: #F8EFBA;
-  text-align: center;
-  padding: 5px;
+#Up {
+  background: url("img/up.png") no-repeat top left;
+  width: 63px;
+  height: 61px;
   position: fixed;
   bottom: 10px;
   right: 10px;
   cursor: pointer;
   display: none;
-  color: #333;
-  font-family: sans-serif;
-  font-size: 1em;
-  font-weight: bold;
 }
